--- a/newsWebsite/.classpath
+++ b/newsWebsite/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="/home/aluno/Documentos/tsi3/apache-tomcat-9.0.71/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/bcrypt-0.10.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
