refactor: inicio da refatoracao as paginas web

--- a/newsWebsite/pom.xml
+++ b/newsWebsite/pom.xml
@@ -25,8 +25,14 @@
             <artifactId>bcrypt</artifactId>
             <version>0.10.2</version>
         </dependency>
-        
-    </dependencies>
+
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.11.0</version>
+      </dependency>
+
+      </dependencies>
   
   <build>
     <plugins>
