--- a/newsWebsite/src/main/webapp/WEB-INF/web.xml
+++ b/newsWebsite/src/main/webapp/WEB-INF/web.xml
@@ -12,17 +12,17 @@
 
   <error-page>
     <error-code>404</error-code>
-    <location>/views/errors/404.jsp</location>
+    <location>/views/errors/404.html</location>
   </error-page>
 
     <error-page>
         <error-code>500</error-code>
-        <location>/views/errors/500.jsp</location>
+        <location>/views/errors/500.html</location>
     </error-page>
 
   <error-page>
     <error-code>401</error-code>
-    <location>/views/errors/401.jsp</location>
+    <location>/views/errors/401.html</location>
   </error-page>
 
 </web-app>
